--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "formdepart",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,16 +8,28 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.9",
+    "firebase": "^11.8.1",
+    "formik": "^2.4.6",
+    "gh-pages": "^6.3.0",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "tailwindcss": "^4.1.8",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+   
+
   },
   "eslintConfig": {
     "extends": [
