--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "chart.js": "^4.4.9",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
-    "gh-pages": "^6.3.0",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -30,8 +29,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-   
-
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
